# T-Plus-Plus

./: .gitignore  .pre-commit-config.yaml  .tppconfig.example  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  tpp.py
.github/workflows/: ci.yml  release.yml
docs/: devops.md  language-guide.md  plugin-guide.md  web-ide.md
examples/: gui.tpp  hello.tpp  math.tpp  plugin_demo.tpp  sample_plugin.json
scripts/: ci_validate.py
tests/: regression.tpp  test_cli_integration.py
tpp/: __init__.py
tpp/cli/: main.py
